force-app/main/default/objects/Account/fields/Numero_Passaporte__c.field-meta.xml
<CustomField>
    <fullName>Numero_Passaporte__c</fullName>
    <label>Numero de passaporte</label>
    <length>50</length>
    <type>Text</type>
</CustomField>