force-app/main/default/objects/Account/fields/Total_oportunidades__c.field-meta.xml
<CustomField>
    <fullName>Total_oportunidades__c</fullName>
    <label>Total oportunidades</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>