force-app/main/default/objects/Account/validationRules/Only_Number_and_Letters.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Number_and_Letters</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Message__c,&quot;[a-zA-Z0-9]*&quot;))</errorConditionFormula>
    <errorDisplayField>Message__c</errorDisplayField>
    <errorMessage>Special character is not allowed</errorMessage>
</ValidationRule>