force-app/main/default/objects/Account/validationRules/Tipo_Valido.validationRule-meta.xml
<ValidationRule>
    <fullName>Tipo_Valido</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Tipo__c , &quot;^.{2}[Xx]&quot;))</errorConditionFormula>
    <errorDisplayField>Tipo__c</errorDisplayField>
    <errorMessage>Tipo invalido, 3 caracter deve contar X ou x</errorMessage>
</ValidationRule>